<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editTransactionLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditTransaction">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titlelayout"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewEditTransactionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="118dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="117dp"
            android:layout_marginBottom="38dp"
            android:text="@string/edit_transaction"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/scrollViewEdit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titlelayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textViewEditTransactionTypeLabel"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:paddingTop="10dp"
                android:text="@string/transaction_type"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioGroup
                android:id="@+id/radioGroupEditTransactionType"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonEditIncome"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/income" />

                <RadioButton
                    android:id="@+id/radioButtonEditExpense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:text="@string/expense" />
            </RadioGroup>

            <TextView
                android:id="@+id/textViewEditTransactionTitleLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/title"
                android:textAppearance="?android:textAppearanceMedium" />

            <EditText
                android:id="@+id/editTextEditTransactionTitle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:hint="@string/enter_transaction_title"
                android:inputType="text" />

            <TextView
                android:id="@+id/textViewEditAmountLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/amount"
                android:textAppearance="?android:textAppearanceMedium" />

            <EditText
                android:id="@+id/editTextEditAmount"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:hint="@string/enter_amount"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textViewEditCategoryLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/category"
                android:textAppearance="?android:textAppearanceMedium" />

            <Spinner
                android:id="@+id/spinnerEditCategory"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:entries="@array/transaction_categories_array" />

            <TextView
                android:id="@+id/textViewEditDateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/date"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:id="@+id/selectedEditDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text=""
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewEditDateLabel" />

            <Button
                android:id="@+id/buttonEditDatePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/bDarkPurple"
                android:text="@string/pick_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/selectedEditDateTextView" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonUpdateTransaction"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/primary_blue"
                    android:text="@string/update" />

                <Button
                    android:id="@+id/buttonDeleteTransaction"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/expense_color"
                    android:text="@string/delete" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonCancelEditTransaction"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/cancel"
                android:textColor="@color/expense_color" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>